[workspace]
resolver = "2"
members = [
  "hftbacktest",
  "hftbacktest-derive",
  "py-hftbacktest",
  "collector"
, "connector"]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = false
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256

[profile.test]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
strip = true
panic = "abort"
incremental = false
codegen-units = 1

[profile.release-with-debug]
inherits = "release"
incremental = true
debug = true
strip = false
