[metadata]
name = hftbacktest
version = attr: hftbacktest.__version__
url = https://github.com/nkaz001/hftbacktest
project_urls =
  Docs = https://hftbacktest.readthedocs.io/en/latest/
  GitHub: issues = https://github.com/nkaz001/hftbacktest/issues
  GitHub: repo = https://github.com/nkaz001/hftbacktest
description = High-frequency trading and market making backtesting tool
long_description = file: README.rst
author = nkaz001
author_email = nkaz001@protonmail.com
keywords = hft, high-frequency trading, trading, market-making, backtest
license = MIT
license_files = LICENSE
classifiers =
  Development Status :: 5 - Production/Stable

  Framework :: Jupyter

  Intended Audience :: Financial and Insurance Industry
  Intended Audience :: Science/Research

  License :: OSI Approved :: MIT License

  Operating System :: POSIX
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows

  Programming Language :: Python
  Programming Language :: Python :: 3

  Topic :: Office/Business :: Financial :: Investment

[options]
python_requires = >=3.8
packages = find:
zip_safe = False
include_package_data = True

install_requires =
  numba ~= 0.57
  numpy < 1.25, >= 1.21
  pandas
  matplotlib
