[package]
name = "collect-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
serde_json = "1.0.113"
futures-util = "0.3.30"
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [] }
anyhow = "1.0.79"
reqwest = { version = "0.12.4", features = ["json"] }
sha2 = "0.11.0-pre.3"
hmac = "0.13.0-pre.3"
thiserror = "1.0.57"
flate2 = "1.0.28"
clap = { version = "4.5.4", features = ["derive"] }