[package]
name = "collector"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.42"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
serde_json = "1.0.145"
futures-util = "0.3.31"
tokio-tungstenite = { version = "0.27", features = ["native-tls"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = [] }
anyhow = "1.0.100"
reqwest = { version = "0.12.23", features = ["json"] }
sha2 = "0.10.9"
hmac = "0.12.1"
thiserror = "2.0.16"
flate2 = "1.1.2"
clap = { version = "4.5.48", features = ["derive"] }
