[package]
name = "connector"
version = "0.1.0"
edition = "2021"

[features]
default = ["binancefutures", "bybit"]
binancefutures = []
bybit = []

[dependencies]
hftbacktest = { path = "../hftbacktest", version = "0.4.0" }
tracing = "0.1.40"
anyhow = "1.0.79"
thiserror = "1.0.57"
bincode = "2.0.0-rc.3"
chrono = { version = "0.4.33" }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.113" }
tokio = { version = "1.35.1", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["rustls-tls-native-roots"] }
reqwest = { version = "0.12.3", default-features = false, features = ["json", "rustls-tls-native-roots"] }
futures-util = { version = "0.3.30" }
sha2 = { version = "0.11.0-pre.3" }
hmac = { version = "0.13.0-pre.3" }
iceoryx2 = { version = "0.4.1", features = ["logger_tracing"] }
toml = "0.8.19"
tracing-subscriber = "0.3.18"
clap = { version = "4.5.15", features = ["derive"] }
hashbrown = "0.15.0"
rand = "0.8.5"