[package]
name = "connector"
version = "0.1.0"
edition = "2024"

[features]
default = ["binancefutures", "binancespot", "bybit"]
binancefutures = []
binancespot = []
bybit = []

[dependencies]
hftbacktest = { path = "../hftbacktest" }
tracing = "0.1.41"
anyhow = "1.0.100"
thiserror = "2.0.16"
bincode = "2.0.1"
chrono = { version = "0.4.42" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = { version = "0.27", features = ["rustls-tls-native-roots"] }
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls-native-roots"] }
futures-util = { version = "0.3.31" }
sha2 = "0.10.9"
hmac = "0.12.1"
iceoryx2 = { version = "0.6.1", features = ["logger_tracing"] }
toml = "0.9.7"
tracing-subscriber = "0.3.20"
clap = { version = "4.5.48", features = ["derive"] }
hashbrown = "0.15.5"
rand = "0.9.2"
ed25519-dalek = { version = "2.2.0", features = [
    "serde",
    "zeroize",
    "rand_core",
    "digest",
    "pkcs8",
    "pem",
] }
base64 = "0.22.1"
serde_qs = "0.15.0"
