[package]
name = "connector"
version = "0.1.0"
edition = "2024"

[features]
default = ["binancefutures", "binancespot", "bybit"]
binancefutures = []
binancespot = []
bybit = []

[dependencies]
hftbacktest = { path = "../hftbacktest" }
tracing = "0.1.43"
anyhow = "1.0.100"
thiserror = "2.0.17"
bincode = "2.0.1"
chrono = { version = "0.4.42" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls-native-roots"] }
futures-util = { version = "0.3.31" }
sha2 = "0.10.9"
hmac = "0.12.1"
iceoryx2 = { version = "0.6.1", features = ["logger_tracing"] }
toml = "0.9.8"
tracing-subscriber = "0.3.22"
clap = { version = "4.5.53", features = ["derive"] }
hashbrown = "0.16.1"
rand = "0.9.2"
ed25519-dalek = { version = "2.2.0", features = [
    "serde",
    "zeroize",
    "rand_core",
    "digest",
    "pkcs8",
    "pem",
] }
base64 = "0.22.1"
serde_qs = "0.15.0"
