[package]
name = "hftbacktest-derive"
version = "0.2.0"
edition = "2021"
authors = ["nkaz001 <nkaz001@protonmail.com>"]
license = "MIT"
description = "hftbacktest: [internal] helper derive proc-macros"
repository = "https://github.com/nkaz001/hftbacktest/"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.36"
syn = "2.0.72"
proc-macro2 = "1.0.86"
