[package]
name = "hftbacktest-derive"
version = "0.2.0"
edition = "2024"
authors = ["nkaz001 <nkaz001@protonmail.com>"]
license = "MIT"
description = "hftbacktest: [internal] helper derive proc-macros"
repository = "https://github.com/nkaz001/hftbacktest/"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.42"
syn = "2.0.111"
proc-macro2 = "1.0.103"
