[package]
name = "hftbacktest"
version = "0.9.2"
edition = "2024"
authors = ["nkaz001 <nkaz001@protonmail.com>"]
license = "MIT"
documentation = "https://docs.rs/hftbacktest/"
repository = "https://github.com/nkaz001/hftbacktest/"
readme = "README.md"
description = "A high-frequency trading and market-making backtesting tool accounts for limit orders, queue positions, and latencies, utilizing full tick data for trades and order books."
keywords = [
    "quantitative",
    "trading",
    "backtesting",
    "cryptocurrency",
    "hft"
]
categories = ["finance", "mathematics", "science", "algorithms", "simulation"]
rust-version = "1.89"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["backtest", "live"]
backtest = ["zip", "uuid", "nom", "hftbacktest-derive"]
live = ["chrono", "tokio", "futures-util", "iceoryx2", "rand", "toml", "serde"]
s3 = ["aws-config", "aws-sdk-s3", "tokio"]

[dependencies]
tracing = "0.1.41"
anyhow = "1.0.99"
thiserror = "2.0.16"
dyn-clone = "1.0.20"
bincode = "2.0.1"
chrono = { version = "0.4.41", optional = true }
tokio = { version = "1.47.1", features = ["full"], optional = true }
zip = { version = "4.3.0", optional = true }
futures-util = { version = "0.3.31", optional = true }
rand = { version = "0.9.2", optional = true }
uuid = { version = "1.18.0", features = ["v4"], optional = true }
nom = { version = "7.1.3", optional = true }
iceoryx2 = { version = "0.6.1", optional = true, features = ["logger_tracing"] }
serde = { version = "1.0.219", optional = true, features = ["derive"] }
toml = { version = "0.9.5", optional = true }
hftbacktest-derive = { path = "../hftbacktest-derive", optional = true, version = "0.2.0" }
aws-config = { version = "1.8.5", optional = true, features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.103.0", optional = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3.19", features = [] }
clap = { version = "4.5.45", features = ["derive"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
