[package]
name = "py-hftbacktest"
version = "2.4.3"
edition = "2024"

[lib]
name = "hftbacktest"
crate-type = ["cdylib"]

[features]
default = []
live = ["hftbacktest/live"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module"] }
hftbacktest = { path = "../hftbacktest", default-features = false, features = ["backtest", "s3"] }
hftbacktest-derive = { path = "../hftbacktest-derive" }

[target.'cfg(all(target_arch = "arm", target_feature = "v7"))'.dependencies]
hftbacktest = { path = "../hftbacktest", default-features = false, features = ["backtest"] }