[package]
name = "py-hftbacktest"
version = "2.4.4"
edition = "2024"

[lib]
name = "hftbacktest"
crate-type = ["cdylib"]

[features]
default = []
live = ["hftbacktest/live"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module"] }
hftbacktest = { path = "../hftbacktest", default-features = false, features = ["backtest", "s3"] }
hftbacktest-derive = { path = "../hftbacktest-derive" }