[package]
name = "hftbacktest"
version = "0.1.0"
edition = "2021"
authors = ["nkaz001 <nkaz001@protonmail.com>"]
license = "MIT"
#documentation = "https://docs.rs/hftbacktest/"
repository = "https://github.com/nkaz001/hftbacktest/rust"
#readme = "README.md"
description = "A high-frequency trading and market-making backtesting tool accounts for limit orders, queue positions, and latencies, utilizing full tick data for trades and order books."
keywords = [
    "quantitative",
    "finance",
    "simulation",
    "trading",
    "backtesting",
    "crypto",
    "hft",
    "high-frequency-trading",
    "market-making"
]
categories = ["finance", "mathematics", "science", "algorithms", "simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
hyper = { version = "1.1.0", features = ["full"] }
hyper-util = "0.1.3"
serde_json = "1.0.113"
futures-util = "0.3.30"
form_urlencoded = "1.2.1"
http = "1.0.0"
bytes = "1.5.0"
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
url = { version = "2.5.0", features = [] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [] }
anyhow = "1.0.79"
reqwest = { version = "0.11.24", features = ["json"] }
sha2 = "0.11.0-pre.3"
hmac = "0.13.0-pre.3"
zip = "0.6.6"
thiserror = "1.0.57"
rand = "0.8.5"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = false
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256

[profile.test]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
strip = true
panic = "abort"
incremental = false
codegen-units = 1

[profile.release-with-debug]
inherits = "release"
incremental = true
debug = true
strip = false
