[package]
name = "hftbacktest"
version = "0.1.0"
edition = "2021"
authors = ["nkaz001 <nkaz001@protonmail.com>"]
license = "MIT"
documentation = "https://docs.rs/hftbacktest/"
repository = "https://github.com/nkaz001/hftbacktest/rust"
readme = "README.rst"
description = "A high-frequency trading and market-making backtesting tool accounts for limit orders, queue positions, and latencies, utilizing full tick data for trades and order books."
keywords = [
    "quantitative",
    "trading",
    "backtesting",
    "crypto",
    "high-frequency-trading"
]
categories = ["finance", "mathematics", "science", "algorithms", "simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["backtest", "live", "binancefutures"]
backtest = ["zip"]
live = ["chrono", "tokio", "futures-util"]
binancefutures = ["serde", "serde_json", "tokio-tungstenite", "reqwest", "sha2", "hmac", "rand"]

[dependencies]
tracing = "0.1.40"
anyhow = "1.0.79"
thiserror = "1.0.57"
chrono = { version = "0.4.33", optional = true }
serde = { version = "1.0.196", features = ["derive"], optional = true }
serde_json = { vesrion = "1.0.113", optional = true }
tokio = { version = "1.35.1", features = ["full"], optional = true }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"], optional = true }
reqwest = { version = "0.12.3", features = ["json"], optional = true }
zip = { version = "0.6.6", optional = true }
futures-util = { version = "0.3.30", optional = true }
sha2 = { version = "0.11.0-pre.3", optional = true }
hmac = { version = "0.13.0-pre.3", optional = true }
rand = { version = "0.8.5", optional = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3.18", features = [] }

[profile.dev]
opt-level = 0
debug = true
debug-assertions = false
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256

[profile.test]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
strip = true
panic = "abort"
incremental = false
codegen-units = 1

[profile.release-with-debug]
inherits = "release"
incremental = true
debug = true
strip = false
