[package]
name = "hftbacktest"
version = "0.1.4"
edition = "2021"
authors = ["nkaz001 <nkaz001@protonmail.com>"]
license = "MIT"
documentation = "https://docs.rs/hftbacktest/"
repository = "https://github.com/nkaz001/hftbacktest/"
readme = "README.md"
description = "A high-frequency trading and market-making backtesting tool accounts for limit orders, queue positions, and latencies, utilizing full tick data for trades and order books."
keywords = [
    "quantitative",
    "trading",
    "backtesting",
    "crypto",
    "hft"
]
categories = ["finance", "mathematics", "science", "algorithms", "simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["backtest", "live", "binancefutures", "bybit"]
backtest = ["zip", "uuid"]
live = ["chrono", "tokio", "futures-util"]
binancefutures = ["serde", "serde_json", "tokio-tungstenite", "reqwest", "sha2", "hmac", "rand"]
bybit = ["serde", "serde_json", "tokio-tungstenite", "reqwest", "sha2", "hmac", "rand"]

[dependencies]
tracing = "0.1.40"
anyhow = "1.0.79"
thiserror = "1.0.57"
chrono = { version = "0.4.33", optional = true }
serde = { version = "1.0.196", features = ["derive"], optional = true }
serde_json = { version = "1.0.113", optional = true }
tokio = { version = "1.35.1", features = ["full"], optional = true }
tokio-tungstenite = { version = "0.23.0", features = ["native-tls"], optional = true }
reqwest = { version = "0.12.3", features = ["json"], optional = true }
zip = { version = "2.1.1", optional = true }
futures-util = { version = "0.3.30", optional = true }
sha2 = { version = "0.11.0-pre.3", optional = true }
hmac = { version = "0.13.0-pre.3", optional = true }
rand = { version = "0.8.5", optional = true }
uuid = { version = "1.8.0", features = ["v4"], optional = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3.18", features = [] }
clap = "4.5.4"
polars = "0.40.0"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = false
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256

[profile.test]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
strip = true
panic = "abort"
incremental = false
codegen-units = 1

[profile.release-with-debug]
inherits = "release"
incremental = true
debug = true
strip = false
