[package]
name = "converter"
version = "0.1.0"
edition = "2021"

[dependencies]
zip = { version = "2.1.3" }
flate2 = {version = "1.0.34" }
hftbacktest = { path = "../../hftbacktest" }
hftbacktest-derive = { path = "../../hftbacktest-derive" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
clap = { version = "4.5.17", features = ["derive"] }
